--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | MC Command Wiki</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pages/style.css">
 </head>
 <body>
     <p class="alert"><strong>THIS PAGE IS UNDER CONSTRUCTION</strong></p>
     <header>
         <h1>Mc Command Wiki</h1>
     </header>
-    <div id="main">
+    <div class="main">
         <h2>What is this?</h2>
         <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
     </div>
