--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Mc Command Wiki</h1>
     </header>
     <div class="main">
+        <input id="search-bar" class="side-element">
         <h2>What is this?</h2>
         <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
     </div>
