Added search bar to main page
Added a search bar to the main page (just links to the search page)

Made search page auto select the search bar

Renamed search page to correct spelling

--- a/pages/search.html
+++ b/pages/search.html
@@ -12,7 +12,7 @@
         <h1>Mc Command Wiki</h1>
     </header>
     <div class="main">
-        <input id="search-bar" class="side-element">
+        <input id="search-bar" class="side-element" placeholder="Search">
         <div id="results"></div>
     </div>
     <template data-result-template>
