Fixed issue where random '>' was appearing on home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Mc Command Wiki</h1>
     </header>
     <div class="main">
-        <a href="pages/search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly>></a>
+        <a href="pages/search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a>
         <h2>What is this?</h2>
         <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
     </div>
