--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | MC Command Wiki</title>
     <link rel="stylesheet" href="pages/style.css">
+    <link rel="stylesheet" href="pages/fonts.css">
 </head>
 <body>
     <p class="alert"><strong>THIS PAGE IS UNDER CONSTRUCTION</strong></p>
     <header>
-        <h1>Mc Command Wiki</h1>
+        <h1 class="font-minecraft" style="font-size: 220%;">Mc Command Wiki</h1>
     </header>
     <div class="main">
         <h2>What is this?</h2>
