--- a/pages/serach.html
+++ b/pages/serach.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Mc Command Wiki</h1>
+        <h1 class="font-minecraft">Mc Command Wiki</h1>
     </header>
     <div id="results" class="main"></div>
     <template>
