Fixed changes between the search.html page and index.html page (makes the transition more seamless)

--- a/pages/search.html
+++ b/pages/search.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="search.css">
 </head>
 <body>
+    <p class="alert"><strong>THIS PAGE IS UNDER CONSTRUCTION</strong></p>
     <header>
-        <h1 class="font-minecraft">Mc Command Wiki</h1>
+        <h1 class="font-minecraft" style="font-size: 220%;">Mc Command Wiki</h1>
     </header>
     <div class="main">
         <input id="search-bar" class="side-element" placeholder="Search">
@@ -23,5 +24,6 @@
     </template>
 
     <script src="search.js"></script>
+    <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki">Github</a></footer>
 </body>
 </html>
