Wait nvm, i forgot this

--- a/pages/search.html
+++ b/pages/search.html
@@ -6,6 +6,7 @@
     <title>Search | MC Command Wiki</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
     <p class="alert"><strong>THIS PAGE IS UNDER CONSTRUCTION</strong></p>
