--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="font-minecraft" style="font-size: 220%;">Mc Command Wiki</h1>
     </header>
     <div class="main">
-        <a href="pages/search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a>
+        <a href="pages/search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a><br>
         <h2>What is this?</h2>
         <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
     </div>
