Improved search ascetics
The search bar is now a smaller sign with the correct font

Result signs now layout in a grid

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <h2>What is this?</h2>
         <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
     </div>
-    <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki">Github</a></footer>
+    <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki"><img class="footer-icon" src="images/github-mark.svg"></a></footer>
 </body>
 </html>
