--- a/pages/search.html
+++ b/pages/search.html
@@ -28,6 +28,6 @@
     </template>
 
     <script src="search.js"></script>
-    <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki">Github</a></footer>
+    <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki"><img class="footer-icon" src="../images/github-mark.svg"></a></footer>
 </body>
 </html>
