Made pages adhere to the theme
Pages now adhere to the theme

Also made it so that the search bar is now in a section made of stone

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <h1 class="font-minecraft" style="font-size: 220%;">Mc Command Wiki</h1>
     </header>
     <div class="main">
-        <a href="pages/search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a><br>
-        <h2>What is this?</h2>
-        <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
+        <a href="pages/search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a>
+        <div class="content">
+            <br>
+            <h2>What is this?</h2>
+            <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
+        </div>
     </div>
     <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki"><img class="footer-icon" src="images/github-mark.svg"></a></footer>
 </body>
