--- a/pages/search.html
+++ b/pages/search.html
@@ -14,8 +14,10 @@
         <h1 class="font-minecraft" style="font-size: 220%;">Mc Command Wiki</h1>
     </header>
     <div class="main">
-        <input id="search-bar" class="side-element" placeholder="Search"><br>
-        <div id="results"></div>
+        <input id="search-bar" class="side-element" placeholder="Search">
+        <div class="content">
+            <div id="results"></div>
+        </div>
     </div>
     <template data-result-template>
         <a href="" data-result-link class="result-link">
