--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <br>
             <h2>What is this?</h2>
             <p>The MC Command Wiki is a simple and readable way to learn about minecraft commands!</p>
+            <a href="/pages/command_sandbox.html">Command Sandbox</a>
         </div>
     </div>
     <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki"><img class="footer-icon" src="images/github-mark.svg"></a></footer>
