--- a/pages/commands/kill.html
+++ b/pages/commands/kill.html
@@ -6,6 +6,7 @@
     <title>Kill | MC Command Wiki</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../fonts.css">
+    <link rel="stylesheet" href="comamnds.css">
 </head>
 <body>
     <p class="alert"><strong>THIS PAGE IS UNDER CONSTRUCTION</strong></p>
@@ -14,7 +15,13 @@
     </header>
     <div class="main">
         <a href="../search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a>
-        <div class="content"></div>
+        <div class="content">
+            <br>
+            <h2>Syntax</h2>
+            <p>The kill command takes in one optional argument, the entity to kill.</p>
+            <p><code>/kill <span title="Selector Argument | The entity to be killed" class="arg">[entity]</span></code></p>
+            <p>The selector can be any valid entity selector and defaults to <code>@s</code> See <a href="selectors.html">Selectors</a> for more info</p>
+        </div>
     </div>
     <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki"><img class="footer-icon" src="../../images/github-mark.svg"></a></footer>
 </body>
