--- a/pages/commands/command.html
+++ b/pages/commands/command.html
@@ -3,26 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kill | MC Command Wiki</title>
+    <title id="title">Tag | MC Command Wiki</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../fonts.css">
-    <link rel="stylesheet" href="comamnds.css">
+    <link rel="stylesheet" href="commands.css">
 </head>
 <body>
     <p class="alert"><strong>THIS PAGE IS UNDER CONSTRUCTION</strong></p>
     <header>
-        <h1 class="font-minecraft" style="font-size: 220%;">/kill</h1>
+        <h1 class="font-minecraft" style="font-size: 220%;" id="header">/tag</h1>
     </header>
     <div class="main">
         <a href="../search.html"><input id="search-bar" class="side-element" placeholder="Search" readonly></a>
-        <div class="content">
+        <div class="content" id="content">
             <br>
-            <h2>Syntax</h2>
-            <p>The kill command takes in one optional argument, the entity to kill.</p>
-            <p><code>/kill <span title="Selector Argument | The entity to be killed" class="arg">[entity]</span></code></p>
-            <p>The selector can be any valid entity selector and defaults to <code>@s</code> See <a href="selectors.html">Selectors</a> for more info</p>
         </div>
     </div>
     <footer><a href="https://github.com/SmoothTurtle872/Mc-Command-Wiki"><img class="footer-icon" src="../../images/github-mark.svg"></a></footer>
+
+    <script src="command.js"></script>
 </body>
 </html>
